Added GET /users/search.
